Add Catamole game + alex creator

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="modes">
       <button id="draw">Draw Killer</button>
       <button id="lidl">Follow the lidl</button>
-      <button id="catamole">Catamole(WIP)</button>
+      <button id="catamole">Catamole V1</button>
     </div>
 
     <div class="details">
