--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <br />
         <br />
   
-        <p id="footer" class="text-center">Made with <span id="heart">&hearts;</span> by @giuseppe and @sergio </p>
+        <p id="footer" class="text-center">Made with <span id="heart">&hearts;</span> by @giuseppe, @sergio  and @dani</p>
         
         <div class="center2"><div id="sfcn3nt46fxd3xufhu9gcnp9k894fs4r2tb"></div>
       <br><a href="https://www.freecounterstat.com">free website counter code</a><noscript><a href="https://www.freecounterstat.com" title="free website counter code"><img src="https://counter10.wheredoyoucomefrom.ovh/private/freecounterstat.php?c=n3nt46fxd3xufhu9gcnp9k894fs4r2tb" border="0" title="free website counter code" alt="free website counter code"></a></noscript></div>
